<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/debug_data_points_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/debug_data_points"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/debug_target_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <Spinner
            android:id="@+id/debug_data_points_targets_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            tools:entries="@array/debug_targets" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_list"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/debug_data_points_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:listitem="@android:layout/simple_list_item_1" />

        <TextView
            android:id="@+id/debug_data_points_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debug_data_points_error"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>