<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MainActivity">

    <TextView
        android:id="@+id/main_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0:05" />

    <Button
        android:id="@+id/main_change_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/main_change"
        app:layout_constraintBottom_toBottomOf="@+id/main_play_pause_button"
        app:layout_constraintStart_toEndOf="@+id/main_play_pause_button"
        app:layout_constraintTop_toTopOf="@+id/main_play_pause_button" />

    <Button
        android:id="@+id/main_play_pause_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/main_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_reset_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/main_reset"
        app:layout_constraintBottom_toBottomOf="@+id/main_play_pause_button"
        app:layout_constraintEnd_toStartOf="@+id/main_play_pause_button"
        app:layout_constraintTop_toTopOf="@+id/main_play_pause_button" />

</androidx.constraintlayout.widget.ConstraintLayout>